--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
         "persistent": false
     },
     "browser_action": {
-        "default_popup": "views/startup.html"
+        "default_popup": "views/popup.html"
     },
     "manifest_version": 2
 }
